- Spectrum Analyzer (Audio Spectrum I mean): you may see full frequency range of the audio wave

Added ZENG Online feature, which allows to run multiplayer online game using a central server
Added ZENG support on curses driver
Added save screen to .txt file
Added save screen to .stl file, useful to print on 3D Printer
Added support for ZX81 .P81 files
Added function to shift bits on Hex Editor
Added TempleOS GUI Style
Added QNX GUI Style
Added menu function to sync local snapshot to remote using ZRCP
Added ZRCP commands: open-menu, print-error, get-text-overlay
Added setting to force CHR$ 128 mode on ZX81
Added search function to locate menu entries
Added .zmenu type files to generate launcher menus
Added more vintage Spectrum programs/games from me
Added Debug Sensors SPK & MIC Bit from port FEH
Added some tape copiers to Storage-> Tape menu

* Improvements:

Allow to load Next .nex/.snx/.sna snapshots with additional files without having to copy them on the mmc file (it mounts automatically the esxdos handler)
Allow to limit max cpu turbo on Next
Allow to pause playing on AY Player
Improved Keyboard Help: now you can press keys by clicking mouse
Allow to not save configuration when exiting ZEsarUX
Allow to select normal ZEsarUX logo or X Anniversary logo
Allow to send ZENG snapshots more frequently (even every 20 ms)
Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
Allow autorewind setting for real tape too
Allow to disable Spectrum colours on real video mode too
Allow to press hotkeys at On Screen Keyboard
Remember last path used on output tape

Improved QL emulation:
- Allow autoload when inserting QL mdv/flp
- Show 2 microdrive and 1 floppy icon on QL, instead of just one icon
- Allow to enable/disable every drive

Improved file selector:
- scrolling the current directory field if it does not fit on the window
- can change extension filter
- when saving files, cursor is located at the file field, and a file name is suggested