@@ -11,6 +11,7 @@ Agregado soporte ZENG en el controlador de curses.
 Agregado soporte para guardar pantalla en archivo .txt.
 Agregado soporte para guardar pantalla en archivo .stl, útil para imprimir en una impresora 3D.
 Agregado soporte para archivos .P81 de ZX81
+Agregado soporte para snapshots .Z81 de ZX81
 Agregada Función para cambiar bits en el editor hexadecimal.
 Agregado estilo GUI de TempleOS
 Agregado estilo GUI de QNX
