@@ -11,6 +11,7 @@ Added ZENG support on curses driver
 Added save screen to .txt file
 Added save screen to .stl file, useful to print on 3D Printer
 Added support for ZX81 .P81 files
+Added support for ZX81 .Z81 snapshots
 Added function to shift bits on Hex Editor
 Added TempleOS GUI Style
 Added QNX GUI Style
